add test cov console

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
 dev_dependencies:
   mockito: ^5.0.8
   build_runner: ^2.0.4
+  test_cov_console: ^0.2.2
   flutter_test:
     sdk: flutter
 
