--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   cached_network_image: ^3.0.0
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
+  rxdart: ^0.27.1
+  flutter_bloc: ^8.0.0
 
 dev_dependencies:
   flutter_test:
