--- a/modules/core/pubspec.yaml
+++ b/modules/core/pubspec.yaml
@@ -28,6 +28,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   mockito: ^5.0.8
   build_runner: ^2.0.4
+  test: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
