--- a/modules/search/pubspec.yaml
+++ b/modules/search/pubspec.yaml
@@ -33,6 +33,7 @@ dev_dependencies:
   mockito: ^5.0.8
   build_runner: ^2.0.4
   bloc_test: ^9.0.0
+  test: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
