--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,21 @@ dependencies:
   search:
     path: modules/search
   flutter_bloc: ^8.0.0
+  http: ^0.13.3
+  provider: ^6.0.3
+  dartz: ^0.10.0-nullsafety.2
+  equatable: ^2.0.2
+  google_fonts: ^3.0.1
+  flutter_rating_bar: ^4.0.0
+  cached_network_image: ^3.0.0
+  sqflite: ^2.0.0+3
+  path_provider: ^2.0.2
+  rxdart: ^0.27.1
   
 dev_dependencies:
   mockito: ^5.0.8
   build_runner: ^2.0.4
+  bloc_test: ^9.1.0
   test_cov_console: ^0.2.2
   flutter_test:
     sdk: flutter
