--- a/modules/about/pubspec.yaml
+++ b/modules/about/pubspec.yaml
@@ -13,11 +13,27 @@ dependencies:
     sdk: flutter
   core:
     path: ../core
+  flutter_bloc: ^8.0.0
+  http: ^0.13.3
+  provider: ^6.0.3
+  dartz: ^0.10.0-nullsafety.2
+  equatable: ^2.0.2
+  google_fonts: ^3.0.1
+  flutter_rating_bar: ^4.0.0
+  cached_network_image: ^3.0.0
+  sqflite: ^2.0.0+3
+  path_provider: ^2.0.2
+  rxdart: ^0.27.1
+  encrypt: ^5.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  mockito: ^5.0.8
+  build_runner: ^2.0.4
+  bloc_test: ^9.0.0
+  test: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
