--- a/modules/search/pubspec.yaml
+++ b/modules/search/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
   rxdart: ^0.27.1
+  encrypt: ^5.0.1
 
 dev_dependencies:
   flutter_test:
