--- a/modules/core/pubspec.yaml
+++ b/modules/core/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   rxdart: ^0.27.1
   flutter_bloc: ^8.0.0
   encrypt: ^5.0.1
+  firebase_core: ^2.4.0
+  firebase_crashlytics: ^3.0.7
 
 dev_dependencies:
   flutter_test:
