--- a/modules/core/analysis_options.yaml
+++ b/modules/core/analysis_options.yaml
@@ -2,3 +2,7 @@ include: package:flutter_lints/flutter.yaml
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
+
+linter:
+  rules:
+    use_key_in_widget_constructors: false
