--- a/modules/movie/pubspec.yaml
+++ b/modules/movie/pubspec.yaml
@@ -1,77 +1,75 @@
 name: movie
 description: A new Flutter package project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.0.1
-homepage:
+homepage: null
 
 environment:
-  sdk: '>=2.18.5 <3.0.0'
+  sdk: ">=2.18.5 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
+  cached_network_image: ^3.0.0
   core:
     path: ../core
-  search:
-    path: ../search
-  flutter_bloc: ^8.0.0
-  http: ^0.13.3
-  provider: ^6.0.3
   dartz: ^0.10.0-nullsafety.2
-  equatable: ^2.0.2
-  google_fonts: ^3.0.1
-  flutter_rating_bar: ^4.0.0
-  cached_network_image: ^3.0.0
-  sqflite: ^2.0.0+3
-  path_provider: ^2.0.2
-  rxdart: ^0.27.1
   encrypt: ^5.0.1
+  equatable: ^2.0.2
   firebase_core: ^2.4.0
   firebase_crashlytics: ^3.0.7
+  flutter:
+    sdk: flutter
+  flutter_bloc: ^8.0.0
+  flutter_rating_bar: ^4.0.0
+  google_fonts: ^3.0.1
+  http: ^0.13.3
+  mocktail: ^0.3.0
+  path_provider: ^2.0.2
+  provider: ^6.0.3
+  rxdart: ^0.27.1
+  search:
+    path: ../search
+  sqflite: ^2.0.0+3
 
 dev_dependencies:
+  bloc_test: ^9.0.0
+  build_runner: ^2.0.4
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
   mockito: ^5.0.8
-  build_runner: ^2.0.4
-  bloc_test: ^9.0.0
   test: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
-flutter:
-
-  # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # To add custom fonts to your package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/custom-fonts/#from-packages
+flutter: null
+# To add assets to your package, add an assets section, like this:
+# assets:
+#   - images/a_dot_burr.jpeg
+#   - images/a_dot_ham.jpeg
+#
+# For details regarding assets in packages, see
+# https://flutter.dev/assets-and-images/#from-packages
+#
+# An image asset can refer to one or more resolution-specific "variants", see
+# https://flutter.dev/assets-and-images/#resolution-aware
+# To add custom fonts to your package, add a fonts section here,
+# in this "flutter" section. Each entry in this list should have a
+# "family" key with the font family name, and a "fonts" key with a
+# list giving the asset and other descriptors for the font. For
+# example:
+# fonts:
+#   - family: Schyler
+#     fonts:
+#       - asset: fonts/Schyler-Regular.ttf
+#       - asset: fonts/Schyler-Italic.ttf
+#         style: italic
+#   - family: Trajan Pro
+#     fonts:
+#       - asset: fonts/TrajanPro.ttf
+#       - asset: fonts/TrajanPro_Bold.ttf
+#         weight: 700
+#
+# For details regarding fonts in packages, see
+# https://flutter.dev/custom-fonts/#from-packages
