--- a/modules/movie/pubspec.yaml
+++ b/modules/movie/pubspec.yaml
@@ -5,7 +5,7 @@ version: 0.0.1
 homepage: null
 
 environment:
-  sdk: ">=2.18.5 <3.0.0"
+  sdk: '>=3.1.0 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
@@ -25,8 +25,8 @@ dependencies:
   firebase_crashlytics: ^3.0.7
   flutter_bloc: ^8.0.0
   flutter_rating_bar: ^4.0.0
-  google_fonts: ^3.0.1
-  http: ^0.13.3
+  google_fonts: ^5.1.0
+  http: ^1.1.0
   mocktail: ^0.3.0
   path_provider: ^2.0.2
   provider: ^6.0.3
